# CFFI-Python-Template

./: .gitignore  Makefile  README.md
backend/lib/: CMakeLists.txt
backend/lib/include/: interface.h
backend/lib/src/: backend.cpp
include/: backend.h
tests/: README.md  functional_test.py
